--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
-    "node-geocoder": "^4.2.0"
+    "mysql2": "^3.6.0",
+    "node-geocoder": "^4.2.0",
+    "sequelize": "^6.32.1",
+    "sequelize-cli": "^6.6.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
