--- a/config/config.json
+++ b/config/config.json
@@ -4,20 +4,38 @@
     "password": "root",
     "database": "knifemap_development",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "define": {
+      "charset": "utf8",
+      "dialectOptions": {
+          "collate": "utf8_general_ci"
+      }
+  }
   },
   "test": {
     "username": "root",
     "password": "root",
     "database": "knifemap_test",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "define": {
+      "charset": "utf8",
+      "dialectOptions": {
+          "collate": "utf8_general_ci"
+      }
+  }
   },
   "production": {
     "username": "cybersecurityhat",
     "password": "rhkddnsgusgh1!",
     "database": "cybersecurityhat",
     "host": "knifemap.cafe24app.com",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "define": {
+      "charset": "utf8",
+      "dialectOptions": {
+          "collate": "utf8_general_ci"
+      }
+  }
   }
 }
